--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
         <p>Mattias Hemmingsson is <b>laughing out loud</b></p>
 
+        <audio autoplay loop>
+          <source src="lol.mp3" type="audio/mpeg">
+        </audio>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
