--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <p>Mattias Hemmingsson is <b>laughing out loud</b></p>
-
+        <p>Mattias Hemmingsson Is <b>Laughing out Loud</b></p>
         <audio autoplay loop>
           <source src="lol.mp3" type="audio/mpeg">
         </audio>
@@ -27,8 +26,10 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-        <script src="js/plugins.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.4.1/randomColor.js"></script>
+
         <script src="js/main.js"></script>
+        
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
