--- a/SoundDeck/index.html
+++ b/SoundDeck/index.html
@@ -19,6 +19,11 @@
                 <i class="fa fa-play" aria-hidden="true"></i>
                 <i class="fa fa-pause" aria-hidden="true"></i>
             </div>
+            <div class="progressbar_seek">
+                <div id="time_tooltip">
+                    
+                </div>
+            </div>
             <div class="progressbar">
                 <small id="time_elapsed">00:00:00</small>
                 <small id="time_total">00:00:00</small>
