--- a/nar-kommer-paula/index.html
+++ b/nar-kommer-paula/index.html
@@ -23,7 +23,7 @@
         100%{-webkit-transform:rotate(360deg);transform:rotate(360deg);}
         }
     </style>
-    <h2>När kommer Paula? 😍</h2>
+    <h2>När kommer Paula till Berlin? 😍</h2>
     <section class="trippy">
         <h1 class="" id="countdown"></h1>
     </section>
