removed old subpages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <p>Mattias Hemmingsson Is <b>Laughing out Loud</b></p>
+        <h1>Mattias Hemmingsson Is <b>Laughing out Loud</b></h1>
         <audio autoplay loop>
           <source src="lol.mp3" type="audio/mpeg">
         </audio>
