fixed gameData error, added blinking to loading, failsafe for youtube

--- a/know-your-edm-3000/index.html
+++ b/know-your-edm-3000/index.html
@@ -65,8 +65,10 @@
                             <div class="bar"></div>
                         </div>
                     </div>
-                    <a href="#" id="track-title">LOADING GAME...
-                    </a>
+                    <div class="track-display">
+                        <a href="#" id="track-title" class="blink">LOADING GAME...
+                        </a>
+                    </div>
                 </div>
             </div>
         </header>
