unmuting youtube by default, renamed small screen overlay

--- a/know-your-edm-3000/index.html
+++ b/know-your-edm-3000/index.html
@@ -88,7 +88,7 @@
         </section>
         <div id="musicPlayer"></div>
         </main>
-                <section class="overlay">
+        <section class="small-screen-overlay">
             <img class="logo" src="img/logo.svg">
             <p>For the time beeing, this game can only be played on desktop browser wider then 900px. Sorry for that.</p>
         </section>
