--- a/index.html
+++ b/index.html
@@ -7,38 +7,21 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-        <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <h1>Mattias Hemmingsson Is <b>Laughing out Loud</b></h1>
-        <audio autoplay loop>
-          <source src="lol.mp3" type="audio/mpeg">
-        </audio>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.4.1/randomColor.js"></script>
-
-        <script src="js/main.js"></script>
-        
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <h1>Mattias is Laughing out Loud</h1>
+        <div class="contact"><a href="mailto:hemmingsson.m@gmail.com">email</a> | <a href="https://github.com/Hemmingsson">github</a> | <a href="https://soundcloud.com/tjorvens">soundcloud</a> | <a id="mute" href="#">mute</a>
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            var laugh = new Audio('./audio/lol.mp3')
+            laugh.loop = true
+            laugh.play()
+
+            document.getElementById('mute').onclick = function () {
+                laugh.paused ? laugh.play() : laugh.pause()
+            }
+
         </script>
+        
     </body>
 </html>
