--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         laugh.paused ? laugh.muted = false : laugh.muted = true
       }
     </script>
+
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107002103-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments)};
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-107002103-1');
+	</script>
     
   </body>
 </html>
