fixed video on mobile + some meta

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>mattias.lol</title>
-    <meta name="application-name" content="Mattias Hemmingsson">
-    <meta name="description" content="Quiz Game for Learning Electronic Dance Music Genres. How High Can You Score?">
+    <title>Mattias Hemmingsson</title>
+    <meta name="description" content="Exciting things I created + Past companies + Contact links">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <link rel="me" href="https://github.com/Hemmingsson" type="text/html">
-    <link rel="me" href="mailto:hemmingsson.m@gmail.com">
+    <meta property="og:image" content="./static/social-image.png" />
 </head>
 
 <body>
@@ -39,6 +38,7 @@
         <article class="project facepause">
             <h2>facepause</h2>
             <section class="preview">
+                    <img class="mobile"/ data-src="static/facepause.gif">
                     <video loop playsinline autoplay muted class="lazy" data-src="static/facepause.mp4" />
             </section>
             <p class="description">FacePause is a Chrome Extension that pauses Youtube when you look away. Or going for a sandwich. This was built to experiment with Chrome's new FaceDetector API and its capabilities.</p>
@@ -57,7 +57,7 @@
             <section class="preview">
                     <img class="lazy" data-src="static/comments.jpg">
             </section>
-            <p class="description">To discover new music, I often browsed the comments of my favorite SoundCloud users. I made that kind of stalking easier through this web application.</p>
+            <p class="description">To discover new music, I often browse the comments of my favorite SoundCloud users. I made that kind of stalking easier with this web application.</p>
             <ul class="links">
                 <ul class="links">
                     <li><a class="button --primary" href="https://hemmingsson.github.io/soundcloud-comments/?user=16993160">Stalk my Comments</a></li>
@@ -71,6 +71,7 @@
                     <img src="static/browser.svg" class="browser">
                     <div class="window">
                         <div class="clock">4:20</div>
+                        <img class="mobile" data-src="https://i.imgur.com/JI7DpWL.gif" />
                         <video loop autoplay muted class="lazy" data-src="https://i.imgur.com/JI7DpWL.mp4"/>
                     </div>
             </section>
@@ -86,7 +87,7 @@
             <section class="preview">
                     <img class="lazy" data-src="static/quickpreview.svg">
             </section>
-            <p class="description">For movies we have trailers to know if it’s worth your time and attention. For music on SoundCloud we have... Quick Preview. A Chrome extension that makes it possible for people to pre-listen to a track on SoundCloud by hovering it.</p>
+            <p class="description">For movies, we have trailers to sample is its worth our time and attention. For music on soundcloud, we have…Quick Preview. A Chrome extension that makes it possible for people to pre-listen to a track on Soundcloud by hovering over it.</p>
             <ul class="links">
                 <li><a class="button --primary" href="https://chrome.google.com/webstore/detail/quick-preview-for-soundcl/lghceigagnfccdnkpdfbbhjjegijbjmp">Install Extension</a></li>
                     <li><a class="button --secondary" href="https://github.com/Hemmingsson/Quick-Preview">GitHub</a></li>
