--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
                             <section class="preview">
                                 <img class="lazy" data-src="static/quickpreview.svg">
                             </section>
-                            <p class="description">For movies, we have trailers to sample is its worth our time and attention. For music on soundcloud, we have…Quick Preview. A Chrome extension that makes it possible for people to pre-listen to a track on Soundcloud by hovering over it.</p>
+                            <p class="description">For movies, we have trailers to sample is its worth our time and attention. For music on soundcloud, we have… Quick Preview. A Chrome extension that makes it possible for people to pre-listen to a track on Soundcloud by hovering over it.</p>
                             <ul class="links">
                                 <li><a class="button --primary" href="https://chrome.google.com/webstore/detail/quick-preview-for-soundcl/lghceigagnfccdnkpdfbbhjjegijbjmp">Install Extension</a></li>
                                 <li><a class="button --secondary" href="https://github.com/Hemmingsson/Quick-Preview">GitHub</a></li>
@@ -105,10 +105,10 @@
                             <article class="work">
                                 <p class="year">2017 &#x2192; 2018</p>
                                 <h4>11 Academia Networks <span>- Senior UX Designer</span></h4>
-                                <p>Niche portals for recruting talent in academia.</p>
+                                <p>Niche portals for recruiting talent in academia.</p>
                             </article>
                             <article class="work">
-                                <p class="year">2015 &#x2192; 2017</p>
+                                <p class="year">2014 &#x2192; 2017</p>
                                 <h4>Ubertweek <span>- Product Designer</span></h4>
                                 <p>Social-data driven discovery API for entertainment industries. Acquired by Dailyme.de.</p>
                             </article>
