--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Mattias Hemmingsson</title>
-        <meta name="description" content="Exciting things I created + Past companies + Contact links">
+        <meta name="description" content="Exciting things I created + Past Experience + Contact links">
         <meta name="robots" content="index,follow">
         <meta name="googlebot" content="index,follow">
         <meta property="og:image" content="./static/social-image.png" />
         <link rel="shortcut icon" href="./static/favicon.png">
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54395885-1"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107002103-1"></script>
         <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-54395885-1');
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-107002103-1');
         </script>
     </head>
     <body>
@@ -35,8 +38,10 @@
                     <li><a class="button --secondary" href="https://github.com/Hemmingsson/dancemusic.wtf">GitHub</a></li>
                     
                     <li><a href="https://news.ycombinator.com/item?id=17696367">Hacker News</a></li>
-                    <li><a href="https://www.producthunt.com/posts/dancemusic-wtf-300">Product Hunt</a></li>
+                    <!-- <li><a href="https://www.producthunt.com/posts/dancemusic-wtf-300">Product Hunt</a></li> -->
                     <li><a href="http://feber.se/internet/art/385952/testa_din_edmkunskaper_med_dan/">Feber.se</a></li>
+                    <li><a href="https://inspiring.online/dancemusic-wtf/">inspiring.online</a></li>
+                    
                 </ul>
             </article>
             <article class="project facepause">
@@ -108,7 +113,7 @@
                                 <p>Niche portals for recruiting talent in academia.</p>
                             </article>
                             <article class="work">
-                                <p class="year">2014 &#x2192; 2017</p>
+                                <p class="year">2014 &#x2192; 2016</p>
                                 <h4>Ubertweek <span>- Product Designer</span></h4>
                                 <p>Social-data driven discovery API for entertainment industries. Acquired by Dailyme.de.</p>
                             </article>
@@ -125,7 +130,7 @@
                             <article class="work">
                                 <p class="year">2011 &#x2192; 2012</p>
                                 <h4>NetEntertainment <span>- Jr Graphic Designer</span></h4>
-                                <p>Supplier of online casino & games software.</p>
+                                <p>Supplier of online casino software & games.</p>
                             </article>
                             <ul>
                                 <li class="link email">Email</li>
