updated sc preview image

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                         <article class="project quickpreview">
                             <h2>quick preview</h2>
                             <section class="preview">
-                                <img class="lazy" data-src="static/quickpreview.svg">
+                                <img class="lazy" data-src="https://camo.githubusercontent.com/cd8b5b88440ffe6415de6049a377abf649645c68/68747470733a2f2f692e696d6775722e636f6d2f5946506b37564f2e6a7067">
                             </section>
                             <p class="description">For movies, we have trailers to sample is its worth our time and attention. For music on soundcloud, we have… Quick Preview. A Chrome extension that makes it possible for people to pre-listen to a track on Soundcloud by hovering over it.</p>
                             <ul class="links">
