notice added & copy updates

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mattias Hemmingsson</title>
     <link rel="stylesheet" href="scss/main.scss">
-    <meta name="description" content="Fun and sometimes usefull things I created">
+    <meta name="description" content="Fun and sometimes usefull things I've created">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <meta property="og:image" content="./static/social-image.png" />
@@ -25,8 +25,7 @@
             <section class="preview">
                 <img src="static/dmwtf.svg" loading="lazy">
             </section>
-            <p class="description"> There are many different sub-genres in the electronic dance music scene, it's hard to distinguish between them - even for music lovers. 
-                This game is created to educate myself and others on this.</p>
+            <p class="description">There are numerous sub-genres in electronic dance music, which makes it hard to distinguish between them - even for music lovers. This game was created to educate myself and others in this.</p>
             <ul class="links">
                 <li>
                     <a class="button primary" href="http://dancemusic.wtf/?mattias.lol">Play Game</a>
@@ -56,7 +55,7 @@
             <section class="preview">
                 <img src="static/systembolaget+.jpg" loading="lazy">
             </section>
-            <p class="description">It's hard to know what's good when browsing Systembolaget. This Chrome extension adds <a href="https://www.vivino.com">Vivino</a> ratings to wine, <a href="https://untappd.com/">Untappd</a> ratings to beer and <a href="https://distiller.com/">Distiller</a> ratings to liquors. Helping me make better decisions.</span>
+            <p class="description">It's tough to know what's good when browsing Systembolaget. This Chrome extension adds <a href="https://www.vivino.com">Vivino</a> ratings to wine, <a href="https://untappd.com/">Untappd</a> ratings to beer, and <a href="https://distiller.com/">Distiller</a> ratings to liquors. Helping me make more informed&nbsp;decisions.</span>
             </p>
             <ul class="links">
                 <ul class="links">
@@ -75,8 +74,8 @@
                 <img class="mobile hidden" loading="lazy" src="static/facepause.gif">
                 <video loop playsinline autoplay muted data-src="./static/facepause.mp4">
             </section>
-            <p class="description">Look away to pause YouTube videos. When Chrome released its FaceDetector API, I built this experiemntal extension to see how good it was. It turns out it works pretty well. <span
-                    class="notice">Removed from the Chrome web store, installing manually might still work.</span>
+            <p class="notice">Removed from the Chrome web store, installing manually still might work.</p>
+            <p class="description">Look away to pause YouTube videos. When Chrome released its FaceDetector API, I built this experimental extension to evaluate how good it was. Turns out it works pretty well.
             </p>
             <ul class="links">
                 <li>
@@ -112,7 +111,7 @@
                 <img class="mobile hidden" loading="lazy" src="static/springsteen.gif">
                 <video loop playsinline autoplay muted data-src="static/springsteen.mp4">
             </section>
-            <p class="description">Spring physics makes animations on the web more fluid and organic. But it's not easy to understand the outcome based on the input values while coding. This interface let’s you find the perfect combination of values for <a href="https://animejs.com/">anime.js</a>.</p>
+            <p class="description">Spring physics makes animations on the web more fluid and organic. But it's not easy to understand the outcome based on the input values while coding. This interface lets you find the perfect combination of values for <a href="https://animejs.com/">anime.js</a>.</p>
             <ul class="links">
                 <li>
                     <a class="button primary"
@@ -125,8 +124,8 @@
             <section class="preview">
                 <img src="static/friskvardsbidrag.jpg" loading="lazy">
             </section>
-            <p class="description">The guidlines for wellness allowance in Sweden are very arbitrary. This is a little quiz
-                game trying to highlight that. </span>
+            <p class="description">The policies for wellness allowance in Sweden are very arbitrary. This little quiz
+                game is trying to highlight that. </span>
             </p>
             <ul class="links">
                 <ul class="links">
@@ -147,7 +146,7 @@
             <section class="preview">
                 <img src="static/palladio.jpg" loading="lazy">
             </section>
-            <p class="description">Palladian architecture is beutiful and repetitive. This application lets you generate that type of architecture. Created over some beers with my good friend <a href="https://christians.design/">Christian</a>.</span>
+            <p class="description">Palladian architecture is repetitive but but captivating. This application lets you generate and play with architecture similar to that. Created over some beers with my good friend <a href="https://christians.design/">Christian</a>.</span>
             </p>
             <ul class="links">
                 <ul class="links">
@@ -166,9 +165,10 @@
                 <img loading="lazy"
                     src="https://camo.githubusercontent.com/cd8b5b88440ffe6415de6049a377abf649645c68/68747470733a2f2f692e696d6775722e636f6d2f5946506b37564f2e6a7067">
             </section>
-            <p class="description">Soundcloud is full of great mixtapes, but it can be hard to judge what kind of music
+            <p class="notice warning">Soundcloud closed their API, this doesn't work anymore.</p>
+            <p class="description">Soundcloud is full of excellent mixtapes, but it can be hard to judge what kind of music
                 they contain. This extension plays short audio samples from different parts in the mixtape before you
-                hit play. <span class="notice">Soundcloud closed their API, this doesn't work anymore.</span>
+                hit play.
             </p>
             <ul class="links">
                 <li>
@@ -198,8 +198,8 @@
                     <video loop autoplay muted data-src="https://i.imgur.com/JI7DpWL.mp4">
                 </div>
             </section>
-            <p class="description">Freeze replaces the new tab page with a mesmerizing cinemagraph every time you open
-                a new tab. <span class="link fetch">Click here</span> to fetch
+            <p class="description">Freeze replaces the new tab page with mesmerizing cinematography every time you open
+                a new tab. At this moment there are <span class="count">400+</span> curated cinemagraphs in total. <span class="link fetch">Click here</span> to fetch
                 another one. </p>
             <ul class="links">
                 <li>
@@ -215,7 +215,7 @@
     </main>
     <footer>
         <div class="wrapper">
-            <h3>Besides these projects I have helpt companies designed & developed products for over 10 years.
+            <h3>Besides these projects, I have helped companies design & developed products for over 10 years.
                 I&nbsp;also went to Hyper&nbsp;Island. </h3>
             <article class="work">
                 <p class="year">2022 →</p>
