disabled old project buttons. removed unnecessary css

--- a/src/index.html
+++ b/src/index.html
@@ -79,9 +79,7 @@
             </p>
             <ul class="links">
                 <li>
-                    <a class="button disabled"
-                        href="https://chrome.google.com/webstore/detail/facepause/igoccmpimadoamkfabcpelmkhpgiafhd">Install
-                        Extension</a>
+                    <a class="button disabled">Install Extension</a>
                 </li>
                 <li>
                     <a class="button secondary" href="https://github.com/Hemmingsson/FacePause">GitHub</a>
@@ -172,9 +170,7 @@
             </p>
             <ul class="links">
                 <li>
-                    <a class="button disabled"
-                        href="https://chrome.google.com/webstore/detail/quick-preview-for-soundcl/lghceigagnfccdnkpdfbbhjjegijbjmp">Install
-                        Extension</a>
+                    <a class="button disabled">Install Extension</a>
                 </li>
                 <li>
                     <a class="button secondary" href="https://github.com/Hemmingsson/Quick-Preview">GitHub</a>
