fixed width bug, and removed hidden loading

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
                 <img class="mobile hidden" loading="lazy" src="static/springsteen.gif">
                 <video loop playsinline autoplay muted data-src="static/springsteen.mp4">
             </section>
-            <p class="description">Spring physics makes animations on the web more fluid and organic. But it's not easy to understand the outcome based on the input values while coding. This interface lets you find the perfect combination of values for <a href="https://animejs.com/">anime.js</a>.</p>
+            <p class="description">Spring physics makes animations look more fluid and organic. But it's not easy to understand the outcome based on the input values while coding. This interface lets you find the perfect combination of values for <a href="https://animejs.com/">anime.js</a>.</p>
             <ul class="links">
                 <li>
                     <a class="button primary"
@@ -144,7 +144,7 @@
             <section class="preview">
                 <img src="static/palladio.jpg" loading="lazy">
             </section>
-            <p class="description">Palladian architecture is repetitive but but captivating. This application lets you generate and play with architecture similar to that. Created over some beers with my good friend <a href="https://christians.design/">Christian</a>.</span>
+            <p class="description">Palladian architecture is repetitive but captivating. This application lets you generate and play with architecture similar to that. Created over some beers with my good friend <a href="https://christians.design/">Christian</a>.</span>
             </p>
             <ul class="links">
                 <ul class="links">
@@ -194,8 +194,8 @@
                     <video loop autoplay muted data-src="https://i.imgur.com/JI7DpWL.mp4">
                 </div>
             </section>
-            <p class="description">Freeze replaces the new tab page with mesmerizing cinematography every time you open
-                a new tab. At this moment there are <span class="count">400+</span> curated cinemagraphs in total. <span class="link fetch">Click here</span> to fetch
+            <p class="description">Freeze replaces the new tab page with a mesmerizing <a href="https://en.wikipedia.org/wiki/Cinemagraph">cinemagraph</a> every time you open
+                a new tab. At this moment there are <span class="count">400+</span> cinemagraphs curated in total. <span class="link fetch">Click here</span> to fetch
                 another one. </p>
             <ul class="links">
                 <li>
